@@ -24,11 +24,12 @@ import java.util.stream.Collectors;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonGetter;
 import com.fasterxml.jackson.annotation.JsonProperty;
+import com.google.common.collect.ImmutableList;
 
 import io.github.zhztheplayer.velox4j.serializable.ISerializable;
 
 public class Config extends ISerializable {
-  private static final Config EMPTY = new Config(List.of());
+  private static final Config EMPTY = new Config(ImmutableList.of());
   public static final String VELOX4J_INIT_PRESET = "velox4j.init.preset";
   public static final String VELOX4J_INIT_PRESET_SPARK = "0";
   public static final String VELOX4J_INIT_PRESET_FLINK = "1";
