@@ -16,7 +16,7 @@
 */
 package io.github.zhztheplayer.velox4j.test;
 
-import java.util.List;
+import com.google.common.collect.ImmutableList;
 
 import io.github.zhztheplayer.velox4j.iterator.UpIterator;
 import io.github.zhztheplayer.velox4j.type.BigIntType;
@@ -27,7 +27,8 @@ public final class SampleQueryTests {
   private static final String SAMPLE_QUERY_OUTPUT_PATH = "query-output/example-1.tsv";
   private static final RowType SAMPLE_QUERY_TYPE =
       new RowType(
-          List.of("c0", "a0", "a1"), List.of(new BigIntType(), new BigIntType(), new BigIntType()));
+          ImmutableList.of("c0", "a0", "a1"),
+          ImmutableList.of(new BigIntType(), new BigIntType(), new BigIntType()));
 
   public static RowType getSchema() {
     return SAMPLE_QUERY_TYPE;
